# binreader

./: Cargo.toml  README.md  TODO.md  helper.py
.vim/: coc-settings.json
binreader/: Cargo.toml
binreader/src/: consuming.rs  iter.rs  lib.rs  mmap.rs  ram.rs  random_access.rs  readers.rs  slice.rs  testing.rs  util.rs
binreader/src/readers/: mmap.rs  random_access.rs  slice.rs
internal-macros/: Cargo.toml
internal-macros/src/: adders.rs  lib.rs  testing.rs
internal-macros/src/adders/: nom.rs
macros/: Cargo.toml
macros/src/: lib.rs  num_getters.rs
