[package]
name = "binreader"
version = "0.2.1"
authors = [ "Brendan McGloin <stmonkeydoom@gmail.com>",]
edition = "2018"
license = "MIT"
description = "A helper library to make reading binary data more pleasant."
homepage = "https://github.com/russells-crockpot/binreader"
repository = "https://github.com/russells-crockpot/binreader"
readme = "../README.md"
documentation = "https://docs.rs/binreader/"

[dependencies]
bytes = "1.0.1"
thiserror = "1.0.25"

[features]
default = []
memmap = [ "fs3", "memmap2",]
nom-support = [ "nom", "binreader-internal-macros/nom",]

[dependencies.bytesize]
version = "1.0.1"
optional = true

[dependencies.fs3]
version = "0.5.0"
optional = true

[dependencies.memmap2]
version = "0.3.0"
optional = true

[dependencies.nom]
version = "6.1.2"
optional = true

[dependencies.binreader-internal-macros]
path = "../internal-macros"
version = "0.2.1"

[dependencies.binreader-macros]
path = "../macros"
version = "0.2.1"
